--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  dartssh2: ^2.9.0
+  flutter_secure_storage: ^9.0.0
   flutter:
     sdk: flutter
 
