--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   xterm: ^4.0.0
   shared_preferences: ^2.2.2
   provider: ^6.1.2
+
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   flutter:
     sdk: flutter
 
@@ -42,6 +45,8 @@ dependencies:
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.7
   flutter_test:
     sdk: flutter
 
