Some fixes for ServerWidget responsivity

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,3 +99,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+dependency_overrides:
+  pinenacl: ^0.6.0
