--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,13 @@ dependencies:
   shared_preferences: ^2.2.2
   provider: ^6.1.2
 
+
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter:
     sdk: flutter
   syncfusion_flutter_charts: ^19.1.54
-
+  flutter_colorpicker: ^1.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
