--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
     sdk: flutter
   syncfusion_flutter_charts: ^19.1.54
   flutter_colorpicker: ^1.0.3
+  reorderable_grid_view: ^2.2.6
 
 
   # The following adds the Cupertino Icons font to your application.
